codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approvals_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Update Model Permissions

› 1. Read Only (current)  Codex can read files in the current workspace.
                          Approval is required to edit files or access the
                          internet.
  2. Default              Codex can read and edit files in the current
                          workspace, and run commands. Approval is required to
                          access the internet or edit other files. (Identical
                          to Agent mode)
  3. Full Access          Codex can edit files outside this workspace and
                          access the internet without asking for approval.
                          Exercise caution when using.

  按  enter 确 认 ， 或  esc 返 回
