codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__disabled_slash_command_while_task_running_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: blob
---
■ 任务进行中，无法使用 '/model'。
