codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exec_approval_history_decision_approved_short.snap
---
source: tui/src/chatwidget/tests.rs
expression: lines_to_single_string(&decision)
---
✔ 您已允许 Codex 运行 echo hello world（仅此一次）
